# tictactoe-alphazero-cpp

./: .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  alphaz_model.cpp  alphaz_model.h  alphazero_model.py  analysis.py  batcher.py  board.cpp  board.h  cell_state.cpp  cell_state.h  console_interface.cpp  console_interface.h  diagnose_shm.py  eval.cpp  example.py  game.cpp  game.h  game_dataset.cpp  game_dataset.h  game_logger.h  inference_client.cpp  inference_client.h  inference_queue.cpp  inference_queue.h  inference_queue_shm.cpp  inference_queue_shm.h  inference_server.py  inference_worker.cpp  inference_worker.h  jax_inference_server.py  logger.cpp  logger.h  main.cpp  mcts_agent.cpp  mcts_agent.h  mcts_agent_parallel.cpp  (+41 more)
checkpoint/: 1.pt  3.pt  4.pt  5.pt  6.pt
executables/: eval.cpp  eval_against_solver.cpp  eval_elo.cpp  eval_triton.cpp  generate_initial_boards.cpp  initial_boards.h  main.cpp  main_triton.cpp  mcts_server.cpp  negamax_server.cpp  round_eval.cpp
src/: constants.py
src/core/game/: board.cpp  board.h  cell_state.cpp  constants.h  game.cpp  game.h  player.cpp  player.h
src/core/mcts/: mcts_agent_selfplay.cpp  mcts_agent_selfplay.h  mcts_agent_triton.cpp  mcts_agent_triton.h  mcts_config.h  position_pool.cpp  position_pool.h
src/core/solver/: misere_solver.cpp  misere_solver.h  misere_solver.py  play_vs_solver.py  solver_main.cpp
src/core/utils/: batcher.py  game_logger.h  logger.cpp  logger.h
src/inference/shared_memory/: inference_queue_shm.cpp  inference_queue_shm.h  inference_server.py  shared_memory_interface.py  shared_memory_protocol.h  shared_memory_protocol.py
src/inference/triton/: triton_inference_client.cpp  triton_inference_client.h  triton_server.py
src/models/: alphazero_model.py
src/training/: train.py  training_shm_protocol.h  training_shm_protocol.py  training_shm_reader.py  training_shm_writer.cpp  training_shm_writer.h  training_shm_writer.py  wandb_logger.py
viewer/: game.html  game.py  game_n.py  mcts-visualizer.html  tictactoe_viewer.html
